# stapel-recordings

./: CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  Makefile  README.md  SECURITY.md  __init__.py  _capabilities.py  _codegen.py  _codegen_settings.py  actions.py  admin.py  apps.py  checks.py  codegen_urls.py  conf.py  conftest.py  dto.py  errors.py  events.py  gdpr.py  models.py  normalize.py  pipeline.py  pyproject.toml  resources.py  serializers.py  services.py  sources.py  stages.py  storage.py  transcript_schema.py  urls.py  urls_v1.py  views.py
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json  capabilities.meta.json  errors.json  schema.json
management/commands/: recordings_reconcile.py
migrations/: 0001_initial.py
schemas/emits/: recording.completed.json  recording.failed.json  recording.stage.json  recording.stage_completed.json  recording.uploaded.json
tests/: conftest.py  fakes.py  test_api.py  test_checks.py  test_contract.py  test_gdpr.py  test_models.py  test_pipeline.py  test_pipeline_extension.py  test_pipeline_mutation.py  test_public_api.py  test_reconcile.py  test_reprocess.py  test_retry_dlq.py  test_schemas.py  test_sources.py  test_storage_seam.py  test_summarize.py  test_transcribe.py  test_upload.py  test_vector.py  test_vector_postgres.py  test_vector_rerank.py  urls.py
vector/: __init__.py  apps.py  embedding.py  models.py  search.py
vector/migrations/: 0001_initial.py
