[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-recordings"
version = "0.1.0"
description = "Recording lifecycle and transcription for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "recordings"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.3.0,<0.4",
]

[project.optional-dependencies]
# S3/MinIO storage backend (stapel_recordings.storage.S3Backend). The
# default DjangoStorageBackend needs no extra. Audio normalization
# (convert stage) additionally needs ffmpeg/ffprobe on PATH at runtime.
s3 = ["boto3>=1.34"]
all = ["stapel-recordings[s3]"]

[tool.setuptools]
package-dir = {"stapel_recordings" = "."}
packages = [
    "stapel_recordings",
    "stapel_recordings.migrations",
    "stapel_recordings.management",
    "stapel_recordings.management.commands",
    "stapel_recordings.tests",
]

[tool.setuptools.package-data]
stapel_recordings = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
