[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-recordings"
version = "0.4.4"
description = "Recording lifecycle and transcription for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "recordings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.10,<1.0",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-recordings"
Repository = "https://github.com/usestapel/stapel-recordings"
Documentation = "https://github.com/usestapel/stapel-recordings#readme"
Changelog = "https://github.com/usestapel/stapel-recordings/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-recordings/issues"

[project.optional-dependencies]
# S3/MinIO storage backend (stapel_recordings.storage.S3Backend). The
# default DjangoStorageBackend needs no extra. Audio normalization
# (convert stage) additionally needs ffmpeg/ffprobe on PATH at runtime.
s3 = ["boto3>=1.34"]
all = ["stapel-recordings[s3]"]

[tool.setuptools]
package-dir = {"stapel_recordings" = "."}
packages = [
    "stapel_recordings",
    "stapel_recordings.migrations",
    "stapel_recordings.management",
    "stapel_recordings.management.commands",
]

[tool.setuptools.package-data]
stapel_recordings = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
